Fix URL decoding compatibility for Android API 28